--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lotide",
+  "name": "@username/lotide",
   "version": "1.0.0",
   "description": "Lotide project",
   "main": "assertArraysEqual.js",
